# gr-qs1r

./: CMakeLists.txt  MANIFEST.yml
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-qs1rConfig.cmake
docs/: CMakeLists.txt  README.qs1r
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
examples/: CMakeLists.txt  qs1r.grc
grc/: CMakeLists.txt  qs1r_qs1r_src.block.yml
include/gnuradio/qs1r/: CMakeLists.txt  api.h  qs1r_src.h
lib/: CMakeLists.txt
python/qs1r/: CMakeLists.txt  __init__.py
python/qs1r/bindings/: CMakeLists.txt  failed_conversions.txt  python_bindings.cc  qs1r_src_python.cc
python/qs1r/bindings/docstrings/: qs1r_src_pydoc_template.h
